# CppND-Capstone-Snake-Game

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: controller.cpp  controller.h  game.cpp  game.h  main.cpp  obstacle.cpp  obstacle.h  renderer.cpp  renderer.h  scoreboard.cpp  scoreboard.h  sdl_util.h  snake.cpp  snake.h
